# collectors-channel-cli

./: .gitignore  .gitlab-ci.yml  README-PyPI.md  README.md  example.env  pyproject.toml
collectors_channel_cli/: main.py
tests/: test_collectors_channel_cli.py
