[tool.poetry]
name = "collectors-channel-cli"
version = "1.8.2"
description = "Monitor your favorite shops in search of disc titles launches and promotions"
authors = ["Paulo Salgado <pjosalgado@gmail.com>"]
readme = "README-PyPI.md"

[tool.poetry.scripts]
collectors = "collectors_channel_cli.main:setup"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.3.2"}
pymongo = "^3.11.3"
dnspython = "^2.1.0"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
