[tool.poetry]
authors = ["Paulo Salgado <pjosalgado@gmail.com>"]
description = "Monitor your favorite shops in search of disc titles launches and promotions"
name = "collectors-channel-cli"
readme = "README-PyPI.md"
version = "1.8.5"

[tool.poetry.scripts]
collectors = "collectors_channel_cli.main:setup"

[tool.poetry.dependencies]
dnspython = "^2.1.0"
pymongo = "^3.11.3"
python = "^3.10"
python-dotenv = "^0.15.0"
typer = {extras = ["all"], version = "^0.3.2"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
